--- a/index.html
+++ b/index.html
@@ -9,8 +9,8 @@
 <body>
     <div class="button-container">
         <button class="big-button" onclick="play('exo1')">JE L'A</button>
-        <button class="big-button" onclick="play('exo2_pb')">passe haut</button>
-        <button class="big-button" onclick="play('exo2_ph')">passe bas</button>
+        <button class="big-button" onclick="play('exo2_pb')">passe bas</button>
+        <button class="big-button" onclick="play('exo2_ph')">passe haut</button>
     </div>
 
     <div class="button-container">
