--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
     <div class="button-container">
         <button class="big-button" onclick="play('exo2_comp')">Compression v1</button>
         <button class="big-button" onclick="play('exo4')">Compression v2</button>
-        <button class="big-button" onclick="play('exo3_mignon')">Mignon</button>
+        <button class="big-button" onclick="play('exo3_mignon')">MINION</button>
         <button class="big-button" onclick="play('exo3_hacker')">Hacker</button>
     </div>
 
